tests/ui/codegen/evm-ir/validation/physical_jumpi_stack_underflow.evmir
//~? ERROR: EVM IR verification failed: block 1: `pop` on an empty stack
@module module

bb0:
  push 1
  push bb1
  jumpi
  stop
bb1:
  pop
  stop
